--- a/src/shared/i18n/es/mail.json
+++ b/src/shared/i18n/es/mail.json
@@ -11,9 +11,9 @@
       "title": "Chatbot completado"
     },
     "ident": {
-      "salutation": "Tu verificación ha sido completada",
-      "body": "<p>Estamos contentos de informarte de que tu verificación ha sido completada exitosamente.<br>No son necesarios más pasos por su parte.</p><p>Buen trading!</p><p>Tu Equipo DFX<br>Bitcoiners de corazón ♥</p>",
-      "title": "Verificación completado"
+      "salutation": "Identificación completada - se comprobarán sus datos",
+      "body": "<p>La identificación se ha completado con éxito y sus datos se comprobarán ahora.<br>La comprobación puede tardar hasta 24 horas en casos individuales.</p><p>Buen trading!</p><p>Tu Equipo DFX<br>Bitcoiners de corazón ♥</p>",
+      "title": "Identificación completada"
     },
     "failed": {
       "salutation": "Tu identificación online ha fallado",
