--- a/src/shared/i18n/es/mail.json
+++ b/src/shared/i18n/es/mail.json
@@ -32,5 +32,12 @@
       "body": "<table style=\"font-family:Open Sans;width:60%;padding:8px;font-size:85%\" align=\"center\"><tr style=\"font-family:Open Sans\"><td colspan=\"3\" align=\"center\">Has accedido con éxito al servicio de staking $DFI de DFX y te hemos pagado tu recompensa de {outputAmount} {outputAsset}.</td></tr><tr style=\"font-family:Open Sans\"><td colspan=\"3\" align=\"center\">Aquí puede encontrar la transacción: <a href=\"https://defiscan.live/transactions/{txId}\">{txId}</a></td></tr><tr style=\"padding:1px\"><td colspan=\"3\"> </td></tr><tr style=\"padding:1px\"><td colspan=\"3\"> </td></tr><tr style=\"padding:1px\"><td colspan=\"3\"> </td></tr><tr style=\"padding:1px\"><td colspan=\"3\"> </td></tr><tr style=\"padding:1px\"><td colspan=\"3\"> </td></tr><tr style=\"font-family:Open Sans;\"><td colspan=\"3\" align=\"center\">Happy Staking!</td></tr><tr style=\"padding:1px\"><td colspan=\"3\"> </td></tr><tr style=\"font-family:Open Sans;\"><td colspan=\"3\" align=\"center\">Your DFX Team</td></tr><tr style=\"padding:1px\"><td colspan=\"3\"> </td></tr><tr style=\"padding:1px\"><td colspan=\"3\"> </td></tr><tr style=\"padding:1px\"><td colspan=\"3\"> </td></tr><tr style=\"padding:1px\"><td colspan=\"3\"> </td></tr><tr><td colspan=\"3\" align=\"center\"><span style=\"font-family:Zapfino\">Bitcoiners by heart ♥️</span></td></tr></table>",
       "title": "La recompensa por referidos se ha pagado"
     }
+  },
+  "payment": {
+    "buy": {
+      "salutation": "",
+      "body": "",
+      "title": ""
+    }
   }
 }
