--- a/src/shared/i18n/fr/mail.json
+++ b/src/shared/i18n/fr/mail.json
@@ -32,5 +32,12 @@
       "body": "<table style=\"font-family:Open Sans;width:60%;padding:8px;font-size:85%\" align=\"center\"><tr style=\"font-family:Open Sans\"><td colspan=\"3\" align=\"center\">Vous avez rejoint le staking de $DFI avec DFX, et nous venons de verser votre bonus de {outputAmount} {outputAsset} de parrainage.</td></tr><tr style=\"font-family:Open Sans\"><td colspan=\"3\" align=\"center\">Voici la transaction: <a href=\"https://defiscan.live/transactions/{txId}\">{txId}</a></td></tr><tr style=\"padding:1px\"><td colspan=\"3\"> </td></tr><tr style=\"padding:1px\"><td colspan=\"3\"> </td></tr><tr style=\"padding:1px\"><td colspan=\"3\"> </td></tr><tr style=\"padding:1px\"><td colspan=\"3\"> </td></tr><tr style=\"padding:1px\"><td colspan=\"3\"> </td></tr><tr style=\"font-family:Open Sans;\"><td colspan=\"3\" align=\"center\">Happy Staking!</td></tr><tr style=\"padding:1px\"><td colspan=\"3\"> </td></tr><tr style=\"font-family:Open Sans;\"><td colspan=\"3\" align=\"center\">Your DFX Team</td></tr><tr style=\"padding:1px\"><td colspan=\"3\"> </td></tr><tr style=\"padding:1px\"><td colspan=\"3\"> </td></tr><tr style=\"padding:1px\"><td colspan=\"3\"> </td></tr><tr style=\"padding:1px\"><td colspan=\"3\"> </td></tr><tr><td colspan=\"3\" align=\"center\"><span style=\"font-family:Zapfino\">Bitcoiners by heart ♥️</span></td></tr></table>",
       "title": "Versement du bonus de parrainage"
     }
+  },
+  "payment": {
+    "buy": {
+      "salutation": "",
+      "body": "",
+      "title": ""
+    }
   }
 }
