--- a/src/shared/i18n/it/mail.json
+++ b/src/shared/i18n/it/mail.json
@@ -32,5 +32,12 @@
       "body": "<table style=\"font-family:Open Sans;width:60%;padding:8px;font-size:85%\" align=\"center\"><tr style=\"font-family:Open Sans\"><td colspan=\"3\" align=\"center\">Ti sei unito con successo allo Staking  di $DFI su DFX e abbiamo appena pagato il tuo bonus di referral di {outputAmount} {outputAsset}.</td></tr><tr style=\"font-family:Open Sans\"><td colspan=\"3\" align=\"center\">Ecco la transazione: <a href=\"https://defiscan.live/transactions/{txId}\">{txId}</a></td></tr><tr style=\"padding:1px\"><td colspan=\"3\"> </td></tr><tr style=\"padding:1px\"><td colspan=\"3\"> </td></tr><tr style=\"padding:1px\"><td colspan=\"3\"> </td></tr><tr style=\"padding:1px\"><td colspan=\"3\"> </td></tr><tr style=\"padding:1px\"><td colspan=\"3\"> </td></tr><tr style=\"font-family:Open Sans;\"><td colspan=\"3\" align=\"center\">Happy Staking!</td></tr><tr style=\"padding:1px\"><td colspan=\"3\"> </td></tr><tr style=\"font-family:Open Sans;\"><td colspan=\"3\" align=\"center\">Your DFX Team</td></tr><tr style=\"padding:1px\"><td colspan=\"3\"> </td></tr><tr style=\"padding:1px\"><td colspan=\"3\"> </td></tr><tr style=\"padding:1px\"><td colspan=\"3\"> </td></tr><tr style=\"padding:1px\"><td colspan=\"3\"> </td></tr><tr><td colspan=\"3\" align=\"center\"><span style=\"font-family:Zapfino\">Bitcoiners by heart ♥️</span></td></tr></table>",
       "title": "Versato il Referral Bonus"
     }
+  },
+  "payment": {
+    "buy": {
+      "salutation": "",
+      "body": "",
+      "title": ""
+    }
   }
 }
