--- a/src/shared/i18n/es/mail.json
+++ b/src/shared/i18n/es/mail.json
@@ -34,10 +34,10 @@
     }
   },
   "payment": {
-    "buy": {
-      "salutation": "",
-      "body": "",
-      "title": ""
+    "buyCrypto": {
+      "salutation": "Tu deposito se ha procesado satisfactoriamente",
+      "body": "<table style=\"font-family:Open Sans,Helvetica,Arial,sans-serif;width:60%;padding:8px;font-size:85%\" align=\"center\"><tr><td align=\"right\">Depositado</td><td style=\"width:2%;\"></td><td align=\"left\">{buyFiatAmount} {buyFiatAsset}</td></tr><tr><td align=\"right\">Pago en criptomonedas</td><td style=\"width:2%;\"></td><td align=\"left\">{buyCryptoAmount} {buyCryptoAsset}</td></tr><tr><td align=\"right\">Comisión</td><td style=\"width:2%;\"></td><td align=\"left\">{buyFeePercentage}%</td></tr><tr><td align=\"right\">Tasa de Cambio</td><td style=\"width:2%;\"></td><td align=\"left\">{buyFeeAmount} {buyFiatAsset}/{buyCryptoAsset}</td></tr><tr><td align=\"right\">Dirección de la billetera</td><td style=\"width:2%;\"></td><td align=\"left\">***{buyWalletAddress}</td></tr><tr style=\"padding:1px\"><td colspan=\"3\"> </td></tr><tr style=\"padding:1px\"><td colspan=\"3\"> </td></tr><tr style=\"padding:1px\"><td colspan=\"3\"> </td></tr><tr style=\"padding:1px\"><td colspan=\"3\"> </td></tr><tr style=\"font-family:Open Sans,Helvetica,Arial,sans-serif\"><td colspan=\"3\" align=\"center\">Aquí puedes encontrar el Identificador de tu transacción con tu pago: <a style=\"color:white\" href=\"https://defiscan.live/transactions/{buyTxId}\">Link</a></td></tr><tr style=\"padding:1px\"><td colspan=\"3\"> </td></tr><tr style=\"padding:1px\"><td colspan=\"3\"> </td></tr><tr style=\"padding:1px\"><td colspan=\"3\"> </td></tr><tr></tr><tr style=\"font-family:Open Sans,Helvetica,Arial,sans-serif\"><td colspan=\"3\" align=\"center\">¡Que disfrutes al comerciar!</td></tr><tr style=\"padding:1px\"><td colspan=\"3\"> </td></tr><tr style=\"padding:1px\"><td colspan=\"3\"> </td></tr><tr style=\"font-family:Open Sans,Helvetica,Arial,sans-serif\"><td colspan=\"3\" align=\"center\">Tu Equipo DFX</td></tr><tr style=\"padding:1px\"><td colspan=\"3\"> </td></tr><tr style=\"padding:1px\"><td colspan=\"3\"> </td></tr><tr style=\"padding:1px\"><td colspan=\"3\"> </td></tr><tr style=\"padding:1px\"><td colspan=\"3\"> </td></tr><tr><td colspan=\"3\" align=\"center\"><span style=\"font-family:Zapfino\">Bitcoiners by heart ♥️</span></td></tr></table>",
+      "title": "Depósito procesado"
     }
   }
 }
