--- a/src/shared/i18n/it/mail.json
+++ b/src/shared/i18n/it/mail.json
@@ -87,12 +87,12 @@
     }
   },
   "amlReasonMailText": {
-    "DailyLimit": "Hai superato il limite senza KYC",
-    "UserDataMismatch": "Il nome che hai fornito a DFX non coincide col nome del proprietario dell'IBAN",
-    "IbanCheck": "L'IBAN non può essere utilizzato con DFX",
-    "KycRejected": "",
-    "NameCheck": "",
-    "AnnualLimit": "",
-    "OlkyNoKyc": ""
+    "DailyLimit": "You exceeded the limit without KYC",
+    "UserDataMismatch": "Your name you provided to DFX does not match the name of the owner of the IBAN",
+    "IbanCheck": "The IBAN cannot be used with DFX",
+    "KycRejected": "Your KYC Request was rejected",
+    "NameCheck": "For legal reasons we can not serve you as a customer",
+    "AnnualLimit": "You exceeded your annual limit",
+    "OlkyNoKyc": "You have to complete KYC for DFX in order to use Olkypay Bank"
   }
 }
