--- a/src/shared/i18n/it/mail.json
+++ b/src/shared/i18n/it/mail.json
@@ -105,6 +105,7 @@
     "KycRejected": "La tua richiesta di KYC è stata rigettata",
     "NameCheck": "Per ragioni legali non possiamo servirti come cliente",
     "AnnualLimit": "Hai superato il tuo limite annuale",
-    "OlkyNoKyc": "Devi completare la KYC per DFX per poter utilizzare Olkypay Bank"
+    "OlkyNoKyc": "Devi completare la KYC per DFX per poter utilizzare Olkypay Bank",
+    "MinDepositNotReached": "The minimum deposit limit was not reached"
   }
 }
