[DEV-946] add translation

--- a/src/shared/i18n/es/mail.json
+++ b/src/shared/i18n/es/mail.json
@@ -106,6 +106,6 @@
     "NameCheck": "Por razones legales, no podemos servirle como cliente",
     "AnnualLimit": "Excedes el límite anual",
     "OlkyNoKyc": "Tienes que completar KYC para DFX para poder usar Olkypay Bank",
-    "MinDepositNotReached": "The minimum deposit limit was not reached"
+    "MinDepositNotReached": "La cantidad de depósito mínima no ha sido alcanzada"
   }
 }
