--- a/src/shared/i18n/it/mail.json
+++ b/src/shared/i18n/it/mail.json
@@ -106,6 +106,6 @@
     "NameCheck": "Per ragioni legali non possiamo servirti come cliente",
     "AnnualLimit": "Hai superato il tuo limite annuale",
     "OlkyNoKyc": "Devi completare la KYC per DFX per poter utilizzare Olkypay Bank",
-    "MinDepositNotReached": "The minimum deposit limit was not reached"
+    "MinDepositNotReached": "Il limite di deposito minimo non è stato raggiunto"
   }
 }
