[DEV-825] limit request mails manual approved (#476)
* [DEV-825] Add personal mail template

* [DEV-825] add Limit Request Mail Manual Approved + migration

* [DEV-825] minor Refactoring

* [DEV-825] Refactoring

* [DEV-825] Refactoring 2

* [DEV-825] Refactoring 3

* [DEV-825] Using generic mail template params

* [DEV-825] add infrastructure + Refactoring

* [DEV-825] add bicep infrastructure

* [DEV-825] Refactoring 4

* [DEV-825] Fix Mails

* [DEV-825] renaming templates

* [DEV-825] Refactoring 5

Co-authored-by: Kolibri1990 <66674482+Kolibri1990@users.noreply.github.com>
Co-authored-by: David May <david.leo.may@gmail.com>

--- a/src/shared/i18n/de/mail.json
+++ b/src/shared/i18n/de/mail.json
@@ -97,6 +97,13 @@
 
     }
   },
+  "limitRequest": {
+    "manualApproved": {
+      "salutation": "Dein Transaktionsvolumen wurde genehmigt",
+      "body": "<p>Hi {firstname},</p><p>Deine Anfrage von {limitAmount} EUR Transaktionsvolumen wurde genehmigt und steht dir nun frei zur Verfügung.</p><p>Herzlichen Dank für dein entgegengebrachtes Vertrauen.</p><p>Bei Fragen zögere bitte nicht, mich anzusprechen.</p><p>Freundliche Grüsse,<br>Theresia</p><p>Assistenz CEO",
+      "title": "Transaktionsvolumen genehmigt"
+    }
+  },
   "link": {
     "address": {
       "salutation": "Du möchtest deine Adresse mit deinem bestehenden Konto verknüpfen?",
